# relget

./: .rustfmt.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEV_NOTES.md  README.md  SUPPORTED_APPS.md  build.rs
.github/workflows/: release.yml
man/: binup.1  rutils-downloader.1
registry-core/: Cargo.toml
registry-core/src/: lib.rs
relget/: Cargo.toml  build.rs
relget/src/: lib.rs  version.rs
relget/src/app/: app.rs  assets.rs  mod.rs
relget/src/clients/: client_trait.rs  codeberg.rs  github.rs  mod.rs
relget/src/prefix/: helpers.rs  installer.rs
relget/src/registry/: app.schema.json  app_entry.rs  category_entry.rs  doctor.rs  loader.rs  mod.rs  registry.rs
src/: archive.rs  cache.rs  cli.rs  codeberg.rs  config.rs  github.rs  installer.rs  lib.rs  main.rs  types.rs  uninstaller.rs  version.rs
src/app/: app.rs  assets.rs
src/apps/: app_assets.rs  app_trait.rs  apps_factory.rs  apps_registry.rs  aqua.rs  ast_grep.rs  atuin.rs  bat.rs  caddy.rs  carapace.rs  chezmoi.rs  d4s.rs  dasel.rs  delta.rs  difftastic.rs  dock_mate.rs  dry.rs  dust.rs  eza.rs  fd_find.rs  fnm.rs  fx.rs  fzf.rs  generic_app.rs  gitleaks.rs  go.rs  gojq.rs  gonzo.rs  jid.rs  jq.rs  jqp.rs  lazy_journal.rs  lazydocker.rs  lazygit.rs  mdbook.rs  mergiraf.rs  mise.rs  mod.rs  neovide.rs  rclone.rs  (+14 more)
src/apps/coding/: ast_grep.rs  deadbranch.rs  fend.rs  grex.rs  hyperfine.rs  mailpit.rs  mkcert.rs  mod.rs  neovide.rs  pyrefly.rs  relget.rs  replibyte.rs  rgx.rs  ruff.rs  rust_analyzer.rs  scc.rs  sqruff.rs  sttr.rs  stylua.rs  taplo.rs  tombi.rs  ty.rs  vacuum.rs
src/apps/containers/: ctop.rs  d4s.rs  dock_mate.rs  dry.rs  dtop.rs  lazydocker.rs  mod.rs
src/apps/data/: dasel.rs  fx.rs  gojq.rs  jid.rs  jq.rs  jqp.rs  mod.rs  qsv.rs  qsv_all.rs  rsv.rs  xq.rs  yq.rs
src/apps/data_processing/: csvtk.rs  dasel.rs  fq.rs  fx.rs  jaq.rs  (+18 more)
src/cli/: cli.rs  doctor.rs  helpers.rs  install.rs  list.rs  main_command.rs  mod.rs  sub_commands.rs  sync.rs  uninstall.rs  update.rs
src/clients/: cache.rs  codeberg.rs  github.rs  gitlab.rs  mod.rs  rate_limit.rs
src/prefix/: doctor.rs  helpers.rs  installer.rs  mod.rs  syncer.rs  uninstaller.rs
src/registry/: app.schema.json  app_entry.rs  app_schema_design.jsonc  categories.jsonc  categories.schema.json  category_entry.rs  doctor.rs  loader.rs  mod.rs  registry.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+315 files in other folders)
