[package]
name = "binup"
version = "0.1.3"
edition = "2021"

[[bin]]
name = "binup"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4.6.5"
ureq = { version = "3.3.0", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4.46"
flate2 = "1"
zip = "8.6.0"
ar = "0.9"
xz2 = "0.1"
bzip2 = "0.6.1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
dirs = "6.0.0"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
regex = "1"
once_cell = "1"
rpassword = "7"
