[workspace]
members = [".", "xtask"]

[workspace.metadata.release]
publish = false
push = false
shared-version = "relget"
tag-name = "v{{version}}"
# pre-release-commit-message = "build: Bumped version {{prev_version}} -> v{{version}}"
pre-release-commit-message = "build: bumped version to v{{version}}"
tag-message = ""

[[workspace.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "## unreleased"
replace = "## unreleased\n\n## v{{version}} ({{date}})"
exactly = 1

[package]
name = "relget"
version = "0.7.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "relget"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4.6.5"
ureq = { version = "3.3.0", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
tar = "0.4.46"
flate2 = "1"
zip = "8.6.0"
ar = "0.9"
xz2 = "0.1"
bzip2 = "0.6.1"
anyhow = "1"
log = "0.4.30"
env_logger = "0.11"
xdg = "2"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
regex = "1"
once_cell = "1"
toml = "1"
zstd = "0.13"
rust-embed = { version = "8", features = ["debug-embed", "include-exclude"] }
serde_yaml = "0.9"
