[workspace]
members         = ["relget", "registry-core", "xtask"]
default-members = ["relget"]
resolver        = "2"

[workspace.metadata.release]
publish = false
push = false
shared-version = "relget"
tag-name = "v{{version}}"
pre-release-commit-message = "build: bumped version to v{{version}}"
tag-message = ""

[[workspace.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "## unreleased"
replace = "## unreleased\n\n## v{{version}} ({{date}})"
exactly = 1
